feat: analytics frontend changes
